# filter_cpp

./: CMakeLists.txt  README.md  build.sh  filter.h  iterator.h  main.cpp
include/: filter.h  iterator.h
tests/: CMakeLists.txt  main.cpp  test_filter.cpp  test_iterator.cpp
